source/stylesheets/components/_slider.scss
.full-slider {
  padding: 0;
  .slider {
    position: relative;
    width: 100%;
    h1 {
      margin-bottom: modular-scale(-5);
    }
    h2.subheader {
      margin-bottom: modular-scale(3);
    }
    blockquote {
      font-size: modular-scale(1);
    }
    .button-row {
      padding-right: 0.2em;
      margin-bottom: 0;
    }
    .button {
      margin-right: 0;
    }
  }
  &.with-padding .slide {
    padding-bottom: $section-spacing;
  }
}

.half-slider {
  padding: 0;
  &.with-padding {
    padding-bottom: $section-spacing;
  }
  .half-slider-row {
    @include ma-row(table);
    margin-bottom: 0;
    .copy {
      padding-top: $section-spacing;
      width: 100%;
    }
    .column {
      width: 100%;
      vertical-align: middle;
      @include media($desktop) {
        @include span-columns(6);
        padding-top: 0;
      }
    }

    @include media($desktop) {
      // Padding on the elements inside,
      // regardless of element
      .column:first-child {
        padding-right: modular-scale(2);
      }
      .column:last-child {
        padding-left: modular-scale(2);
      }
    }
  }
  .slide {
    padding: $section-spacing;
    padding-bottom: modular-scale(2, $section-spacing);
    @include media($desktop) {
      padding-bottom: $section-spacing;
    }
    .subheader {
      padding-top: modular-scale(0);
      margin-bottom: modular-scale(0);
    }
    p {
      display: none;
      @include media($desktop) {
        max-width: modular-scale(11);
        margin: 0 auto;
      }
    }
  }
}

.slide {
  position: relative;
  padding: $section-spacing 0 0;
}

// Style slick buttons
.slick-prev, .slick-next {
  position: absolute;
  top: 0;
  height: 100%;
  width: modular-scale(2);
  border: none;
  color: transparent;
  background: transparent;
  &:focus {
    outline: none;
  }
  &:before {
    font-size: modular-scale(4);
    position: absolute;
    color: $medium-gray;
    top: 50%;
    height: modular-scale(0);
    width: modular-scale(0);
    cursor: pointer;
    transition: all 0.2s ease-in-out;
  }
  &:hover:before {
    color: $brand-primary-color;
  }
  // This is to stop buttons from appearing
  // on hover (specificity w/.button)
  &:hover, &:focus {
    background: transparent;
    color: transparent;
    border: none;
  }
}
.slick-prev {
  left: 0;
  &:before {
    left: 0;
    @include ma-arrow-icon($left-arrow);
  }
}
.slick-next {
  right: 0;
  &:before {
    right: 0;
    @include ma-arrow-icon($right-arrow);
  }
}

